[package]
name = "repoad"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
content_inspector = "0.2.4"
flate2 = "1.1.2"
git2 = "0.20.2"
ignore = "0.4.25"
reqwest = { version = "0.12.20", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
tempfile = "3.20.0"
